@@ -102,6 +102,7 @@ CREATE TABLE `building_access` (
   `REPEAT_DAYS` varchar(7) NOT NULL DEFAULT '',
   `REPEAT_THROUGH` date DEFAULT NULL,
   `SAFETY_MONITOR` char(1) NOT NULL DEFAULT '',
+  `PRIVACY` char(1) NOT NULL DEFAULT '',
   PRIMARY KEY (`ID`),
   KEY `NETID` (`NETID`,`START_TIME`),
   KEY `START_TIME` (`START_TIME`),
