@@ -36,3 +36,12 @@ welcome.</p>
 if( !defined('BUILDING_VISIBILITY_MANIFEST_GROUP') ) {
   define('BUILDING_VISIBILITY_MANIFEST_GROUP',array());
 }
+
+if( !defined('DEFAULT_PRIVACY') ) {
+  define('DEFAULT_PRIVACY',false);
+}
+
+if( !defined('USER_SETTABLE_PRIVACY') ) {
+  # default to false, so old database schema lacking PRIVACY column still works if the admin doesn't take action
+  define('USER_SETTABLE_PRIVACY',false);
+}
